# simple_calculator

./: CMakeLists.txt  README.md  simple_calculator.cpp
